--- a/.github/workflows/update-assets.yml
+++ b/.github/workflows/update-assets.yml
@@ -1,32 +1,80 @@
 name: Update Assets from Tandem Connect
 
-permissions:
-  contents: write
-  
 on:
   repository_dispatch:
     types: [update-assets]
-  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   update-assets:
     runs-on: ubuntu-latest
-    
+    concurrency:
+      group: update-assets
+      cancel-in-progress: false
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-      
-      - name: Create data directory
-        run: mkdir -p data
-      
-      - name: Save asset data
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          fetch-depth: 0
+
+      - name: Merge asset data
         run: |
-          echo '${{ toJSON(github.event.client_payload) }}' > data/assets.json
-      
+          # Get incoming batch data
+          INCOMING='${{ toJson(github.event.client_payload) }}'
+          
+          # Read existing assets (or create empty structure)
+          if [ -f data/assets.json ]; then
+            EXISTING=$(cat data/assets.json)
+          else
+            EXISTING='{"assets":[]}'
+          fi
+          
+          # Merge using Node.js
+          node << 'EOF'
+          const fs = require('fs');
+          
+          const incoming = JSON.parse(process.env.INCOMING || '{}');
+          const existing = JSON.parse(process.env.EXISTING || '{"assets":[]}');
+          
+          // Get incoming assets
+          const newAssets = incoming.assets || [];
+          const existingAssets = existing.assets || [];
+          
+          // Create a map of existing assets by assetId
+          const assetMap = new Map();
+          existingAssets.forEach(a => assetMap.set(a.assetId, a));
+          
+          // Add/update with new assets
+          newAssets.forEach(a => assetMap.set(a.assetId, a));
+          
+          // Convert back to array and sort
+          const mergedAssets = Array.from(assetMap.values())
+            .sort((a, b) => a.assetId.localeCompare(b.assetId));
+          
+          const output = {
+            lastUpdated: new Date().toISOString(),
+            totalAssets: mergedAssets.length,
+            assets: mergedAssets
+          };
+          
+          fs.mkdirSync('data', { recursive: true });
+          fs.writeFileSync('data/assets.json', JSON.stringify(output, null, 2));
+          
+          console.log(`Merged ${newAssets.length} incoming assets`);
+          console.log(`Total assets now: ${mergedAssets.length}`);
+          EOF
+        env:
+          INCOMING: ${{ toJson(github.event.client_payload) }}
+          EXISTING: ${{ env.EXISTING }}
+
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+          git pull origin main --rebase
           git add data/assets.json
           git diff --staged --quiet || git commit -m "Update assets from Tandem Connect"
           git push
